# black-hole-simulator

./: pyproject.toml  requirements.txt
bhsim.xcodeproj/: project.pbxproj
bhsim.xcodeproj/project.xcworkspace/xcuserdata/harisforde.xcuserdatad/: UserInterfaceState.xcuserstate
bhsim.xcodeproj/xcshareddata/xcschemes/: bhsim.xcscheme
bhsim.xcodeproj/xcuserdata/harisforde.xcuserdatad/xcschemes/: xcschememanagement.plist
black hole simulator/black hole simulator/: main.cpp
black hole simulator/black hole simulator.xcodeproj/: project.pbxproj
src/bhsim/bhsim/: main.cpp
src/bhsim/bhsim.xcodeproj/: project.pbxproj
src/fluid/: analysis.hpp  build.sh  cell.hpp  cons.hpp  ct.hpp  data.hpp  grid.hpp  hlld.hpp  initial.hpp  main.cpp  metric.hpp  prim.hpp  recon.hpp  rk2.hpp  state.hpp
src/fluid/data/: quantitatives.cpp
src/fluid/grid/: grid.cpp  reconstruction.cpp  transport.cpp
src/fluid/physics/: conserved.cpp  metric.hpp  prim.hpp  primitive.cpp  spacetime.cpp  thermo.cpp
src/fluid/solver/: hlld.cpp  initconds.cpp  integrator.cpp
src/render/: call.py  diagnostics.py  img_rendering.py  light_path_plot.py  motion_helper.py  plots.py  rendering.py  test.py  vid_rendering.py
src/render/Classes/: base.py  classes.py  int_and_settings.py  math.py  physics.py  tags.py
src/render/Classes/ColFields/: checkerboard.py  const_col.py
src/render/Classes/GravField/: funcs.py  grav_lib.py  kerr.py  kerr_newman.py  methods.py  minkowski.py  precomp.py  schwarzschild.py
src/render/Classes/Hittables/: blackbody.py  checkerboard.py  light.py  null.py
(+23 files in other folders)
